--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.body {
+    background-color: #BD6565;
+}
+
 .home-screen {
     background-color: #EFFBFF;
     width: 100%;
