change bg color

--- a/main.css
+++ b/main.css
@@ -5,8 +5,11 @@
 }
 
 body {
-    background-color: #BD6565;
+    background-color: green;
 }
+
+
+
 
 .home-screen {
     background-color: #EFFBFF;
